added code with copy to get rid of warnings

--- a/avocado_datascience_2.ipynb
+++ b/avocado_datascience_2.ipynb
@@ -650,6 +650,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "albany_df = df.copy()[df[\"region\"] == \"Albany\" ]\n",
+    "albany_df.set_index(\"Date\", inplace=True)\n",
+    "albany_df.sort_index(inplace=True)\n",
+    "albany_df['price25ma'] = albany_df['AveragePrice'].rolling(25).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
