finished graphing by region

--- a/avocado_datascience_2.ipynb
+++ b/avocado_datascience_2.ipynb
@@ -1352,6 +1352,303 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>California_price25ma</th>\n",
+       "      <th>Roanoke_price25ma</th>\n",
+       "      <th>Denver_price25ma</th>\n",
+       "      <th>SanDiego_price25ma</th>\n",
+       "      <th>GreatLakes_price25ma</th>\n",
+       "      <th>RichmondNorfolk_price25ma</th>\n",
+       "      <th>DallasFtWorth_price25ma</th>\n",
+       "      <th>SanFrancisco_price25ma</th>\n",
+       "      <th>HarrisburgScranton_price25ma</th>\n",
+       "      <th>Pittsburgh_price25ma</th>\n",
+       "      <th>...</th>\n",
+       "      <th>MiamiFtLauderdale_price25ma</th>\n",
+       "      <th>TotalUS_price25ma</th>\n",
+       "      <th>Nashville_price25ma</th>\n",
+       "      <th>Northeast_price25ma</th>\n",
+       "      <th>Atlanta_price25ma</th>\n",
+       "      <th>Tampa_price25ma</th>\n",
+       "      <th>Midsouth_price25ma</th>\n",
+       "      <th>BaltimoreWashington_price25ma</th>\n",
+       "      <th>NorthernNewEngland_price25ma</th>\n",
+       "      <th>West_price25ma</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-02-25</th>\n",
+       "      <td>1.9128</td>\n",
+       "      <td>1.6136</td>\n",
+       "      <td>1.7084</td>\n",
+       "      <td>2.0276</td>\n",
+       "      <td>1.5656</td>\n",
+       "      <td>1.5244</td>\n",
+       "      <td>1.5708</td>\n",
+       "      <td>1.9960</td>\n",
+       "      <td>1.5004</td>\n",
+       "      <td>1.4004</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.7140</td>\n",
+       "      <td>1.7144</td>\n",
+       "      <td>1.7296</td>\n",
+       "      <td>1.6940</td>\n",
+       "      <td>1.8660</td>\n",
+       "      <td>1.7204</td>\n",
+       "      <td>1.7252</td>\n",
+       "      <td>1.5836</td>\n",
+       "      <td>1.6280</td>\n",
+       "      <td>1.8620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-03-04</th>\n",
+       "      <td>1.8876</td>\n",
+       "      <td>1.5972</td>\n",
+       "      <td>1.6880</td>\n",
+       "      <td>1.9988</td>\n",
+       "      <td>1.5460</td>\n",
+       "      <td>1.5016</td>\n",
+       "      <td>1.5536</td>\n",
+       "      <td>1.9968</td>\n",
+       "      <td>1.4972</td>\n",
+       "      <td>1.3976</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.7068</td>\n",
+       "      <td>1.6940</td>\n",
+       "      <td>1.7036</td>\n",
+       "      <td>1.6860</td>\n",
+       "      <td>1.8288</td>\n",
+       "      <td>1.7104</td>\n",
+       "      <td>1.7084</td>\n",
+       "      <td>1.5772</td>\n",
+       "      <td>1.6224</td>\n",
+       "      <td>1.8220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-03-11</th>\n",
+       "      <td>1.8636</td>\n",
+       "      <td>1.5828</td>\n",
+       "      <td>1.6708</td>\n",
+       "      <td>1.9668</td>\n",
+       "      <td>1.5248</td>\n",
+       "      <td>1.4920</td>\n",
+       "      <td>1.5340</td>\n",
+       "      <td>2.0016</td>\n",
+       "      <td>1.4956</td>\n",
+       "      <td>1.3968</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.6904</td>\n",
+       "      <td>1.6748</td>\n",
+       "      <td>1.6688</td>\n",
+       "      <td>1.6868</td>\n",
+       "      <td>1.7844</td>\n",
+       "      <td>1.6916</td>\n",
+       "      <td>1.6924</td>\n",
+       "      <td>1.5732</td>\n",
+       "      <td>1.6264</td>\n",
+       "      <td>1.7912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-03-18</th>\n",
+       "      <td>1.8516</td>\n",
+       "      <td>1.5624</td>\n",
+       "      <td>1.6700</td>\n",
+       "      <td>1.9476</td>\n",
+       "      <td>1.5012</td>\n",
+       "      <td>1.4744</td>\n",
+       "      <td>1.5196</td>\n",
+       "      <td>1.9936</td>\n",
+       "      <td>1.4956</td>\n",
+       "      <td>1.3944</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.6692</td>\n",
+       "      <td>1.6588</td>\n",
+       "      <td>1.6300</td>\n",
+       "      <td>1.6852</td>\n",
+       "      <td>1.7412</td>\n",
+       "      <td>1.6776</td>\n",
+       "      <td>1.6768</td>\n",
+       "      <td>1.5684</td>\n",
+       "      <td>1.6284</td>\n",
+       "      <td>1.7644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-03-25</th>\n",
+       "      <td>1.8364</td>\n",
+       "      <td>1.5532</td>\n",
+       "      <td>1.6568</td>\n",
+       "      <td>1.9268</td>\n",
+       "      <td>1.4912</td>\n",
+       "      <td>1.4672</td>\n",
+       "      <td>1.5100</td>\n",
+       "      <td>1.9776</td>\n",
+       "      <td>1.4900</td>\n",
+       "      <td>1.3936</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.6392</td>\n",
+       "      <td>1.6428</td>\n",
+       "      <td>1.6004</td>\n",
+       "      <td>1.6804</td>\n",
+       "      <td>1.6936</td>\n",
+       "      <td>1.6484</td>\n",
+       "      <td>1.6592</td>\n",
+       "      <td>1.5568</td>\n",
+       "      <td>1.6312</td>\n",
+       "      <td>1.7304</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 54 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            California_price25ma  Roanoke_price25ma  Denver_price25ma  \\\n",
+       "Date                                                                    \n",
+       "2018-02-25                1.9128             1.6136            1.7084   \n",
+       "2018-03-04                1.8876             1.5972            1.6880   \n",
+       "2018-03-11                1.8636             1.5828            1.6708   \n",
+       "2018-03-18                1.8516             1.5624            1.6700   \n",
+       "2018-03-25                1.8364             1.5532            1.6568   \n",
+       "\n",
+       "            SanDiego_price25ma  GreatLakes_price25ma  \\\n",
+       "Date                                                   \n",
+       "2018-02-25              2.0276                1.5656   \n",
+       "2018-03-04              1.9988                1.5460   \n",
+       "2018-03-11              1.9668                1.5248   \n",
+       "2018-03-18              1.9476                1.5012   \n",
+       "2018-03-25              1.9268                1.4912   \n",
+       "\n",
+       "            RichmondNorfolk_price25ma  DallasFtWorth_price25ma  \\\n",
+       "Date                                                             \n",
+       "2018-02-25                     1.5244                   1.5708   \n",
+       "2018-03-04                     1.5016                   1.5536   \n",
+       "2018-03-11                     1.4920                   1.5340   \n",
+       "2018-03-18                     1.4744                   1.5196   \n",
+       "2018-03-25                     1.4672                   1.5100   \n",
+       "\n",
+       "            SanFrancisco_price25ma  HarrisburgScranton_price25ma  \\\n",
+       "Date                                                               \n",
+       "2018-02-25                  1.9960                        1.5004   \n",
+       "2018-03-04                  1.9968                        1.4972   \n",
+       "2018-03-11                  2.0016                        1.4956   \n",
+       "2018-03-18                  1.9936                        1.4956   \n",
+       "2018-03-25                  1.9776                        1.4900   \n",
+       "\n",
+       "            Pittsburgh_price25ma  ...  MiamiFtLauderdale_price25ma  \\\n",
+       "Date                              ...                                \n",
+       "2018-02-25                1.4004  ...                       1.7140   \n",
+       "2018-03-04                1.3976  ...                       1.7068   \n",
+       "2018-03-11                1.3968  ...                       1.6904   \n",
+       "2018-03-18                1.3944  ...                       1.6692   \n",
+       "2018-03-25                1.3936  ...                       1.6392   \n",
+       "\n",
+       "            TotalUS_price25ma  Nashville_price25ma  Northeast_price25ma  \\\n",
+       "Date                                                                      \n",
+       "2018-02-25             1.7144               1.7296               1.6940   \n",
+       "2018-03-04             1.6940               1.7036               1.6860   \n",
+       "2018-03-11             1.6748               1.6688               1.6868   \n",
+       "2018-03-18             1.6588               1.6300               1.6852   \n",
+       "2018-03-25             1.6428               1.6004               1.6804   \n",
+       "\n",
+       "            Atlanta_price25ma  Tampa_price25ma  Midsouth_price25ma  \\\n",
+       "Date                                                                 \n",
+       "2018-02-25             1.8660           1.7204              1.7252   \n",
+       "2018-03-04             1.8288           1.7104              1.7084   \n",
+       "2018-03-11             1.7844           1.6916              1.6924   \n",
+       "2018-03-18             1.7412           1.6776              1.6768   \n",
+       "2018-03-25             1.6936           1.6484              1.6592   \n",
+       "\n",
+       "            BaltimoreWashington_price25ma  NorthernNewEngland_price25ma  \\\n",
+       "Date                                                                      \n",
+       "2018-02-25                         1.5836                        1.6280   \n",
+       "2018-03-04                         1.5772                        1.6224   \n",
+       "2018-03-11                         1.5732                        1.6264   \n",
+       "2018-03-18                         1.5684                        1.6284   \n",
+       "2018-03-25                         1.5568                        1.6312   \n",
+       "\n",
+       "            West_price25ma  \n",
+       "Date                        \n",
+       "2018-02-25          1.8620  \n",
+       "2018-03-04          1.8220  \n",
+       "2018-03-11          1.7912  \n",
+       "2018-03-18          1.7644  \n",
+       "2018-03-25          1.7304  \n",
+       "\n",
+       "[5 rows x 54 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph_df = pd.DataFrame()\n",
+    "\n",
+    "for region in df['region'].unique():\n",
+    "    region_df = df.copy()[df['region']==region]\n",
+    "    region_df.set_index('Date', inplace=True)\n",
+    "    region_df.sort_index(inplace=True)\n",
+    "    region_df[f\"{region}_price25ma\"] = region_df[\"AveragePrice\"].rolling(25).mean()\n",
+    "\n",
+    "    if graph_df.empty:\n",
+    "        graph_df = region_df[[f\"{region}_price25ma\"]]  # note the double square brackets! (so df rather than series)\n",
+    "    else:\n",
+    "        graph_df = graph_df.join(region_df[f\"{region}_price25ma\"])\n",
+    "\n",
+    "graph_df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
