min wage dataset analysis

--- a/min_wage_datascience_1.ipynb
+++ b/min_wage_datascience_1.ipynb
@@ -1725,12 +1725,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# "
+    "# Some states just have no data from the original dataset. Not much that can be fixed here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
