challenge problems and extra plotly practice

--- a/Plotly_Basics/plotly_setup_test.ipynb
+++ b/Plotly_Basics/plotly_setup_test.ipynb
@@ -891,6 +891,200 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~Isaac_S/34.embed\" height=\"600px\" width=\"600px\"></iframe>"
+      ],
+      "text/plain": [
+       "<chart_studio.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly.figure_factory as ff\n",
+    "\n",
+    "x = df_bar_pubg['solo_Wins']\n",
+    "y = df_bar_pubg['solo_TimeSurvived']\n",
+    "#z = df_bar_pubg['squad_Heals']\n",
+    "\n",
+    "colorscale = ['#7A4579', '#D56073', 'rgb(236,158,105)', (1, 1, 0.2), (0.98,0.98,0.98)]\n",
+    "\n",
+    "fig = ff.create_2d_density(\n",
+    "    x, y, colorscale=colorscale,\n",
+    "    hist_color='rgb(255, 237, 222)', point_size=3\n",
+    ")\n",
+    "\n",
+    "\n",
+    "py.iplot(fig, filename='histogram_subplots')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>tracker_id</th>\n",
+       "      <th>solo_KillDeathRatio</th>\n",
+       "      <th>solo_WinRatio</th>\n",
+       "      <th>solo_TimeSurvived</th>\n",
+       "      <th>solo_RoundsPlayed</th>\n",
+       "      <th>solo_Wins</th>\n",
+       "      <th>solo_WinTop10Ratio</th>\n",
+       "      <th>solo_Top10s</th>\n",
+       "      <th>solo_Top10Ratio</th>\n",
+       "      <th>...</th>\n",
+       "      <th>squad_RideDistance</th>\n",
+       "      <th>squad_MoveDistance</th>\n",
+       "      <th>squad_AvgWalkDistance</th>\n",
+       "      <th>squad_AvgRideDistance</th>\n",
+       "      <th>squad_LongestKill</th>\n",
+       "      <th>squad_Heals</th>\n",
+       "      <th>squad_Revives</th>\n",
+       "      <th>squad_Boosts</th>\n",
+       "      <th>squad_DamageDealt</th>\n",
+       "      <th>squad_DBNOs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BreakNeck</td>\n",
+       "      <td>4405</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>17.65</td>\n",
+       "      <td>18469.14</td>\n",
+       "      <td>17</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>4</td>\n",
+       "      <td>23.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3751590.99</td>\n",
+       "      <td>5194786.58</td>\n",
+       "      <td>2626.97</td>\n",
+       "      <td>4372.64</td>\n",
+       "      <td>536.98</td>\n",
+       "      <td>2186</td>\n",
+       "      <td>234</td>\n",
+       "      <td>1884</td>\n",
+       "      <td>242132.73</td>\n",
+       "      <td>1448</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 152 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  player_name  tracker_id  solo_KillDeathRatio  solo_WinRatio  \\\n",
+       "0   BreakNeck        4405                 3.14          17.65   \n",
+       "\n",
+       "   solo_TimeSurvived  solo_RoundsPlayed  solo_Wins  solo_WinTop10Ratio  \\\n",
+       "0           18469.14                 17          3                0.83   \n",
+       "\n",
+       "   solo_Top10s  solo_Top10Ratio  ...  squad_RideDistance  squad_MoveDistance  \\\n",
+       "0            4             23.5  ...          3751590.99          5194786.58   \n",
+       "\n",
+       "   squad_AvgWalkDistance  squad_AvgRideDistance  squad_LongestKill  \\\n",
+       "0                2626.97                4372.64             536.98   \n",
+       "\n",
+       "   squad_Heals  squad_Revives  squad_Boosts  squad_DamageDealt  squad_DBNOs  \n",
+       "0         2186            234          1884          242132.73         1448  \n",
+       "\n",
+       "[1 rows x 152 columns]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bar_pubg.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~Isaac_S/36.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<chart_studio.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plotly.tools.set_credentials_file(username='Isaac_S', api_key='KJba6wzin95iSJHLMkXn')\n",
+    "\n",
+    "x = df_bar_pubg['solo_Wins']\n",
+    "y = df_bar_pubg['solo_TimeSurvived']\n",
+    "z = df_bar_pubg['solo_RoundsPlayed']\n",
+    "\n",
+    "trace1 = go.Scatter3d(\n",
+    "    x=x,\n",
+    "    y=y,\n",
+    "    z=z,\n",
+    "    mode='markers',\n",
+    "    marker=dict(\n",
+    "    size=12,\n",
+    "    color=z,\n",
+    "    colorscale='Viridis',\n",
+    "    opacity=0.8))\n",
+    "\n",
+    "data = [trace1]\n",
+    "layout = go.Layout(\n",
+    "    margin=dict(\n",
+    "    l=0,\n",
+    "    r=0,\n",
+    "    b=0,\n",
+    "    t=0)\n",
+    ")\n",
+    "\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "py.iplot(fig, filename='3d-pubg-plot')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
